--- a/package.json
+++ b/package.json
@@ -3,12 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.5.0",
+    "@mui/material": "^5.0.6",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "framework7": "^6.3.6",
+    "framework7-react": "^6.3.6",
+    "grommet": "^2.18.0",
+    "password-hash": "^1.2.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
+    "react-input-switch": "^2.2.2",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-toggle": "^4.1.2",
+    "styled-components": "^5.3.1",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
